# aetheros

./: .gitattributes  .gitignore  Makefile  README.md  aetheros.config
device/generic/arm64/: device.mk
docs/design/: architecture.md
docs/guides/: developer-guide.md
src/apps/launcher/: pubspec.yaml
src/apps/launcher/lib/: main.dart
src/compositor/: CMakeLists.txt  compositor.cpp  main.cpp
src/kernel/: .vmlinux.export.c  custom_mobile_os_kernel_config.sh
src/kernel/arch/arm64/kernel/vdso/: vdso.so.dbg
src/kernel/arch/x86/entry/vdso/: vdso32.so.dbg  vdso64.so.dbg
src/kernel/arch/x86/realmode/rm/: realmode.elf
src/kernel/config_backups/: .config.20250808_154554
src/kernel/drivers/of/: empty_root.dtb
src/kernel/include/config/: auto.conf
src/kernel/scripts/genksyms/: lex.lex.c  parse.tab.c  parse.tab.h
tools/debugging/: adb-shell.sh
tools/flashing/: flash.sh
